관광객 리스트에 텍스트도 넣음

--- a/TripWithMe/res/layout/activity_travelerlist.xml
+++ b/TripWithMe/res/layout/activity_travelerlist.xml
@@ -98,7 +98,8 @@
         <ListView
             android:id="@+id/travelerList"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent" 
+            android:background="#999999"/>
 
         <!-- 드러워 -->
 
