--- a/TripWithMe/res/layout/listitem_travelerlist.xml
+++ b/TripWithMe/res/layout/listitem_travelerlist.xml
@@ -4,15 +4,17 @@
     android:layout_height="110dp" >
 
     <!-- listView background image for each item -->
+
     <ImageView
         android:id="@+id/travelerList_bkgnd"
         android:layout_width="match_parent"
         android:layout_height="110dp"
-        android:scaleType="fitXY"
         android:maxHeight="110dp"
+        android:scaleType="fitXY"
         android:src="@drawable/profilelist_bkgnd" />
 
     <!-- align each item with the tableLayout -->
+
     <TableLayout
         android:layout_width="match_parent"
         android:layout_height="110dp" >
@@ -22,10 +24,9 @@
         <TableRow>
 
             <LinearLayout
-                android:layout_width="fill_parent"
+                android:layout_width="match_parent"
                 android:layout_height="90dp"
-                android:orientation="horizontal"
-                android:weightSum="4" >
+                android:orientation="horizontal">
 
                 <FrameLayout
                     android:id="@+id/travelerList_photo"
@@ -43,10 +44,66 @@
                         android:src="@drawable/profilelist_photo_bkgnd" />
                 </FrameLayout>
 
-                <TableLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="90dp" >
-                </TableLayout>
+                <RelativeLayout
+                    android:layout_width="240dp"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical" >
+
+                    <TextView
+                        android:id="@+id/traveler_listitem_name"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentEnd="true"
+                        android:layout_alignParentRight="true"
+                        android:layout_marginTop="15dp"
+                        android:layout_marginStart="15dp"
+                    	android:layout_marginLeft="15dp"
+                        android:textColor="#000000"
+                        android:textSize="10sp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/traveler_listitem_nationality"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentEnd="true"
+                        android:layout_alignParentRight="true"
+                        android:layout_below="@id/traveler_listitem_name"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginStart="15dp"
+                    	android:layout_marginLeft="15dp"
+                        android:textColor="#000000"
+                        android:textSize="7sp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/traveler_listitem_language"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentEnd="true"
+                        android:layout_alignParentRight="true"
+                        android:layout_below="@id/traveler_listitem_nationality"
+                        android:layout_marginTop="4dp"
+                        android:layout_marginStart="15dp"
+                    	android:layout_marginLeft="15dp"
+                        android:textColor="#000000"
+                        android:textSize="7sp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/traveler_listitem_attraction"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentEnd="true"
+                        android:layout_alignParentRight="true"
+                        android:layout_below="@id/traveler_listitem_language"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginStart="15dp"
+                    	android:layout_marginLeft="15dp"
+                        android:textColor="#000000"
+                        android:textSize="7sp"
+                        android:textStyle="bold" />
+                </RelativeLayout>
             </LinearLayout>
         </TableRow>
 
@@ -54,23 +111,48 @@
 
         <TableRow>
 
-            <LinearLayout
-                android:layout_width="fill_parent"
+            <RelativeLayout
+                android:layout_width="match_parent"
                 android:layout_height="20dp"
-                android:orientation="horizontal"
-                android:weightSum="4" >
+                android:orientation="horizontal" >
 
                 <TextView
                     android:id="@+id/traveler_listitem_period"
                     android:layout_width="100dp"
                     android:layout_height="match_parent"
-                    android:layout_weight="1"
                     android:background="#000000"
                     android:text="@string/listItem_period"
                     android:textColor="#ffffff"
                     android:textColorHighlight="#000000"
                     android:textStyle="bold" />
-            </LinearLayout>
+
+                <TextView
+                    android:id="@+id/traveler_listitem_love_number"
+                    android:layout_width="40dp"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:textAlignment="center"
+                    android:layout_marginEnd="1dp"
+                    android:layout_marginRight="1dp"
+                    android:textColor="#000000"
+                    android:textSize="10sp"
+                    android:textStyle="bold" />
+
+                <ImageView
+                    android:id="@+id/travelerList_listitem_love_heart"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:layout_centerVertical="true"
+                    android:layout_toLeftOf="@id/traveler_listitem_love_number"
+                    android:layout_toStartOf="@id/traveler_listitem_love_number"
+                    android:layout_marginEnd="3dp"
+                    android:layout_marginRight="3dp"
+                    android:layout_marginTop="3dp"
+                    android:layout_marginBottom="3dp"
+                    android:src="@drawable/profilelist_btn_heart" />
+            </RelativeLayout>
         </TableRow>
     </TableLayout>
 
