--- a/TripWithMe/res/layout/activity_main.xml
+++ b/TripWithMe/res/layout/activity_main.xml
@@ -73,6 +73,7 @@
         <LinearLayout
             xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
+            android:id="@+id/main_layout_background"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:orientation="vertical"
@@ -202,7 +203,8 @@
             android:layout_height="match_parent"
             android:layout_gravity="start"
             android:background="#FFFFFF"
-            android:orientation="vertical" >
+            android:orientation="vertical" 
+            android:clickable="true">
 
             <LinearLayout
                 android:layout_width="match_parent"
