--- a/TripWithMe/res/layout/activity_travelerlist.xml
+++ b/TripWithMe/res/layout/activity_travelerlist.xml
@@ -109,7 +109,8 @@
             android:layout_height="match_parent"
             android:layout_gravity="start"
             android:background="#FFFFFF"
-            android:orientation="vertical" >
+            android:orientation="vertical" 
+            android:clickable="true">
 
             <LinearLayout
                 android:layout_width="match_parent"
