배경화면 바뀌는 효과 추가

--- a/TripWithMe/res/layout/activity_main.xml
+++ b/TripWithMe/res/layout/activity_main.xml
@@ -82,6 +82,7 @@
             <!-- 검색창과 큰 그림 -->
 
             <RelativeLayout
+                android:id="@+id/main_layout_wallpaper"
                 android:layout_width="fill_parent"
                 android:layout_height="0dp"
                 android:layout_weight="5"
